--- a/thankyou.html
+++ b/thankyou.html
@@ -15,12 +15,12 @@
     href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700&family=Nunito:wght@400;600;800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
 
-  <header class="navbar navbar--mobile-fixed">
+  <header class="navbar navbar-mobile-fixed">
     <div class="container">
       <div class="navbar-top navbar-top--fixed">
 
@@ -31,7 +31,7 @@
         <form action="#" class="search navbar__search navbar__search--mobile--hidden">
           <input type="text" placeholder="Search Location" class="search__input">
           <button class="search__button">
-            <img src="img/search.svg" alt="Icon: search">
+            <img src="img/search.svg" alt="Icon: search" width="16" height="16">
           </button>
         </form>
 
@@ -65,7 +65,7 @@
             <form action="#" class="search navbar__search navbar__search--mobile--visible">
               <input type="text" placeholder="Search Location" class="search__input">
               <button class="search__button">
-                <img src="img/search.svg" alt="Icon: search">
+                <img src="img/search.svg" alt="Icon: search" width="16" height="16">
               </button>
             </form>
           </li>
@@ -97,7 +97,7 @@
     </div>
     <!-- /.navbar-button -->
   </header>
-  <!-- /.navbar navbar--mobile-fixed -->
+  <!-- /.navbar navbar-mobile-fixed -->
 
   <nav class="breadcrumb">
     <div class="container">
@@ -145,15 +145,15 @@
   <footer class="footer">
     <div class="container footer__container">
       <div class="footer-wrapper">
-
+  
         <a href="index.html" class="footer-logo">
           <img src="img/vertical-logo.svg" alt="Logo: Best Tour Plan" class="logo footer__logo">
         </a>
-
+  
         <div class="footer__list footer__category">
-
+  
           <h3 class="footer__title">All&nbsp;categories</h3>
-
+  
           <ul class="footer__ul">
             <li class="footer__item">
               <a href="#" class="footer__link">All Deals</a>
@@ -180,14 +180,14 @@
               <a href="#" class="footer__link">Rodrigues</a>
             </li>
           </ul>
-
+  
         </div>
         <!-- /.footer__list footer__category -->
-
+  
         <div class="footer__list footer__additional">
-
+  
           <h3 class="footer__title">Additional&nbsp;information</h3>
-
+  
           <ul class="footer__ul">
             <li class="footer__item">
               <a href="#" class="footer__link">About Us</a>
@@ -208,44 +208,44 @@
               <a href="#" class="footer__link">Promote your Business on BTP</a>
             </li>
           </ul>
-
+  
         </div>
         <!-- /.footer__list footer__additional -->
-
+  
         <div class="footer__social-network">
-
+  
           <h3 class="footer__title footer__title--inline">Social&nbsp;Network</h3>
-
+  
           <div class="footer__social-links">
-
+  
             <a href="https://www.facebook.com/" target="_blank" class="footer__link">
               <svg class="footer__img">
                 <use xlink:href="img/social.svg#facebook"></use>
               </svg>
             </a>
-
+  
             <a href="https://www.youtube.com/" target="_blank" class="footer__link">
               <svg class="footer__img">
                 <use xlink:href="img/social.svg#youtube"></use>
               </svg>
             </a>
-
+  
             <a href="https://www.instagram.com/" target="_blank" class="footer__link">
               <svg class="footer__img">
                 <use xlink:href="img/social.svg#instagram"></use>
               </svg>
             </a>
-
+  
           </div>
           <!-- /.footer__social-links -->
-
+  
         </div>
         <!-- /.footer__social-network -->
-
+  
         <div class="footer__list footer__legal">
-
+  
           <h3 class="footer__title footer__title-legal">Legal&nbsp;information</h3>
-
+  
           <ul class="footer__ul">
             <li class="footer__item">
               <a href="#" class="footer__link">Terms & Conditions</a>
@@ -260,86 +260,86 @@
               <a href="#" class="footer__link">Privacy</a>
             </li>
           </ul>
-
+  
         </div>
         <!-- /.footer__list footer__legal -->
-
+  
         <div class="footer__contact-details">
-
+  
           <h3 class="footer__title footer__title-contact">Contact Details</h3>
-
+  
           <p class="footer__text">Feel free to contact us by phone, email or by our contact form</p>
-
+  
           <ul class="footer__ul">
             <li class="footer__item">
               <div class="footer__icon-wrapper">
-                <img class="footer__icon" src="img/footer-location.svg" alt="Icon: Location">
+                <img class="footer__icon" src="img/footer-location.svg" alt="Icon: Location" width="14" height="20">
               </div>
               <span class="footer__text">9748 Blossom Hill Rd undefined Lansing, Idaho 68545 United States</span>
             </li>
-
+  
             <li class="footer__item">
               <div class="footer__icon-wrapper">
-                <img class="footer__icon" src="img/footer-phone.svg" alt="Icon: Phone call">
+                <img class="footer__icon" src="img/footer-phone.svg" alt="Icon: Phone call" width="22" height="22">
               </div>
               <span class="footer__text">
                 Tel (business hours): <a href="tel:2691500" class="footer__link">269 1500</a><br>
                 Tel (hotline) Monday - Saturday: <a href="tel:52566138"
                   class="footer__link">52&#8209;56&#8209;61&#8209;38</a> (08:00 am – 20:00 pm)<br>
-                Tel (hotline) Sunday: <a href="tel:52566138" class="footer__link">52&#8209;56&#8209;61&#8209;38</a>
-                (08:00 am – 14:00 pm)
+                Tel (hotline) Sunday: <a href="tel:52566138" class="footer__link">52&#8209;56&#8209;61&#8209;38</a> (08:00
+                am – 14:00 pm)
               </span>
             </li>
-
+  
             <li class="footer__item">
               <div class="footer__icon-wrapper">
-                <img class="footer__icon" src="img/footer-email.svg" alt="Icon: E-mail">
+                <img class="footer__icon" src="img/footer-email.svg" alt="Icon: E-mail" width="17" height="14">
               </div>
               <a href="mailto:=cherly.lawson@example.com" class="footer__link">cherly.lawson@example.com</a>
             </li>
           </ul>
-
+  
         </div>
         <!-- /.footer__contact-details -->
-
+  
         <div class="footer__contact-form">
-
+  
           <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-
+  
           <form class="form footer__form" action="send.php" method="post">
-
+  
             <div class="footer__input-wrapper">
               <div class="footer__input-group">
                 <input name="name" class="input footer__input" type="text" placeholder="Your Full Name*" minlength="2"
                   required>
               </div>
-
+  
               <div class="footer__input-group">
                 <input name="phone" class="input footer__input phone-number" type="tel" placeholder="Phone Number*"
                   minlength="18" required>
               </div>
             </div>
             <!-- /.footer__input-wrapper -->
-
+  
             <div class="footer__message-wrapper">
               <textarea name="message" class="message footer__message" cols="30" rows="10"
                 placeholder="Message"></textarea>
             </div>
-
+  
             <div class="footer__info-bottom">
               <button class="button footer__button" type="submit">Send</button>
-
+  
               <span class="footer__info">* Required Fields</span>
             </div>
-
+  
           </form>
-
+  
         </div>
         <!-- /.footer__contact-form -->
-
+  
       </div>
       <!-- /.footer-wrapper -->
-
+  
       <div class="footer__bottom">
         <div class="main-information">
           <a href="#" class="main-information__link">Disclaimer</a>
@@ -350,15 +350,13 @@
         <img src="img/payment-systems.png" alt="Icon: Payment systems" class="footer__bottom-image">
       </div>
       <!-- /.footer__bottom -->
-
+  
     </div>
     <!-- /.container -->
   </footer>
   <!-- /.footer -->
 
   <script src="js/jquery-3.6.0.min.js"></script>
-  <script src="js/parallax.min.js"></script>
-  <script src="js/swiper-bundle.min.js"></script>
   <script src="js/jquery.validate.min.js"></script>
   <script src="js/jquery.mask.min.js"></script>
   <script src="js/main.js"></script>
