--- a/thankyou.html
+++ b/thankyou.html
@@ -15,7 +15,7 @@
     href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700&family=Nunito:wght@400;600;800&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -129,9 +129,9 @@
             <h1 class="hotel-name hotel-info__name">Message sent!</h1>
           </div>
           <!-- /.hotel-wrapper -->
-          <p class="hotel-description hotel-info__description">Our specialist will contact with you soon.</p>
+          <h2 class="hotel-description hotel-info__description">Our specialist will contact with you soon.</h2>
 
-          <input class="button button__thankyou" type="button" onclick="history.back();" value="Back" />
+          <input class="button button-thankyou" type="button" onclick="history.back();" value="Back" />
 
         </div>
         <!-- /.hotel-info__text -->
