--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   >
   <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -392,12 +392,14 @@
             <!-- /.detailed-pack__name -->
   
             <!-- Описание -->
-            <p class="detailed-pack__information">Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim
+            <div class="detailed-pack__information">
+            <p class="detailed-pack__information-text">Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur enim
               laborum magna llit. Ipsum est fugiat velit ea
               llamco do esse ut in veniam sun in onsequat. Aute quis duis epteur excepteur ipsum occaecat eiusmod
               nsectetur enim
-              laborum magna mollit. Ipsum est fugiat velit ea ullamco do</p>
-  
+              laborum magna mollit. Ipsum est fugiat velit ea ullamco do
+            </p>
+            </div>
             <!-- О номере -->
             <div class="pack__room detailed-pack__room">
               <div class="pack__text">
