--- a/thankyou.html
+++ b/thankyou.html
@@ -359,7 +359,7 @@
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/jquery.validate.min.js"></script>
   <script src="js/jquery.mask.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.min.js"></script>
 
 </body>
 
